--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,43 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
+   
     <ion-title>Home</ion-title>
+   
   </ion-navbar>
 </ion-header>
 
+
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<div *ngIf="servicos.length > 0; else vazio">
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <ion-card>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+    <ion-item *ngFor="let item of servicos; let i = index;">
+
+    {{i + 1}} - {{item.nome}}
+    <p>
+      {{ item.data | date: 'dd/MM/yyyy H:mm'}}
+    </p>
+
+    </ion-item>
+ 
+  </ion-card>
+
+
+
+</div>
+<ng-template #vazio>
+
+  <ion-card>
+    
+    <h4 padding=5px> Nenhum Registro Cadastrado !!!</h4>
+
+  </ion-card>
+
+
+
+</ng-template> 
 </ion-content>
